fix overflow of novel list item

--- a/app/assets/stylesheets/index.css.scss
+++ b/app/assets/stylesheets/index.css.scss
@@ -76,6 +76,7 @@
   border: 1px solid gray;
   margin: 2px;
   max-height: 100px; 
+  overflow: hidden;
 }
 
 .novel_list_item:hover{
